# RM2022_contrib_modules

./: .gitattributes  .gitignore  README.md
nahsor_modules/: CMakeLists.txt  package.xml
nahsor_modules/config/: nahsor_param.yaml
nahsor_modules/include/nahsor_modules/: nahsor.hpp  nahsor_detector.hpp  nahsor_node.hpp  nahsor_prediction.hpp  nahsor_utils.hpp  rune.hpp
nahsor_modules/launch/: nahsor.launch.py
nahsor_modules/src/: nahsor.cpp  nahsor_detector.cpp  nahsor_main.cpp  nahsor_node.cpp  nahsor_prediction.cpp
record_node/: package.xml  setup.cfg  setup.py
record_node/config/: record.yaml
record_node/launch/: record.launch.py
record_node/record_node/: video_record.py
rm_auto_aim/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/config/: rm_auto_aim.yaml
rm_auto_aim/include/rm_auto_aim/: armor_detector_interface.hpp  armor_detector_svm.hpp  auto_aim_algo.hpp  auto_aim_node.hpp  simple_auto_aim_algo.hpp  simple_auto_aim_node.hpp
rm_auto_aim/include/rm_auto_aim/detector/: armor_detector_onnx.hpp
rm_auto_aim/launch/: auto_aim_node.launch.py  mv_cam_test.launch.py
rm_auto_aim/resource/: HOG_SVM.xml.REMOVED.git-id  ImageClassifier.onnx.REMOVED.git-id  lenet_with_negative.onnx  mnist_svm.xml.REMOVED.git-id
rm_auto_aim/src/: armor_detector_svm.cpp  auto_aim_node.cpp  auto_aim_node_main.cpp  simple_auto_aim_main.cpp  simple_auto_aim_node.cpp
rm_auto_aim/src/detectors/: armor_detector_onnx.cpp  armor_detector_svm.cpp  auto_aim_algo.cpp  simple_auto_aim_algo.cpp
rm_filters/: CMakeLists.txt  README.md  package.xml  test.cpp
rm_filters/include/rm_filters/: ekf_filter.hpp  filter_interface.hpp  filter_state.hpp  kf_filter.hpp  rm_filters.hpp
rm_filters/inlcude/: filter_interface.hpp
rm_filters/src/: ekf_filter.cpp  filter_state.cpp  kf_filter.cpp
rm_filters/test/: CMakeLists.txt  kf_test.cpp
rm_hero_auto_aim/: CMakeLists.txt  README.md  package.xml
rm_hero_auto_aim/config/: rm_auto_aim.yaml
rm_hero_auto_aim/include/rm_hero_auto_aim/: armor_detector_interface.hpp  armor_detector_svm.hpp  auto_aim_algo.hpp  auto_aim_node.hpp
rm_hero_auto_aim/launch/: auto_aim_node.launch.py  mv_cam_test.launch.py  virtual_cam_test.launch.py
rm_hero_auto_aim/resource/: mnist_svm.xml
rm_hero_auto_aim/src/: auto_aim_main.cpp  auto_aim_node.cpp
rm_hero_auto_aim/src/detectors/: armor_detector_svm.cpp  auto_aim_algo.cpp
rm_launch/: CMakeLists.txt  README.md  package.xml
rm_launch/config/: 048021610074.Config  all_param.yaml
rm_launch/launch/: all_up.launch.py  hero_all_up.launch.py  hero_imu_up.launch.py  imu_up.launch.py  infantry_all_up.launch.py  sentry_all_up.launch.py  sentry_imu_up.launch.py
rm_sentry/: CMakeLists.txt  FindTensorRT.cmake  package.xml
rm_sentry/config/: rm_sentry.yaml
rm_sentry/include/rm_sentry/: open_detector.hpp  opencv_detector.hpp  sentry_algo.hpp  sentry_detector.hpp  sentry_node.hpp
rm_sentry/launch/: sentry.launch.py
rm_sentry/models/: model-opt-int8.bin.REMOVED.git-id  polygon_best.bin.REMOVED.git-id  polygon_best.mapping  polygon_best.xml
rm_sentry/src/: open_detector.cpp  opencv_detector.cpp  sentry_algo.cpp  sentry_detector.cpp  sentry_main.cpp  sentry_node.cpp
rm_trajectory/: CMakeLists.txt  README.md  cmakelists.txt  package.xml
rm_trajectory/include/rm_trajectory/: database_solver.hpp  gravity_nofriction_solver.hpp  gravity_projectile_solver.hpp  gravity_solver.hpp  iterative_trajectory_tool.hpp  trajectory_gaf.hpp  trajectory_gimbal.hpp  trajectory_gravity.hpp  trajectory_interface.hpp  trajectory_pitch.hpp  trajectory_tool.hpp  transform_tool.hpp
rm_trajectory/src/ballistic_trajectory/: database_solver.cpp  gravity_nofriction_solver.cpp  gravity_projectile_solver.cpp  gravity_solver.cpp  iterative_trajectory_tool.cpp  trajectory_gaf.cpp  trajectory_gimbal.cpp  trajectory_gravity.cpp  trajectory_pitch.cpp  trajectory_tool.cpp  transform_tool.cpp
rm_trajectory/test/: CMakeLists.txt  test_trajectory.cpp
rm_trajectory/test_record/: 18模型效果.fig  30模型效果.fig  5.17弹道测试记录.md  trajectory.m  trajectory_18.m
rm_util/: CMakeLists.txt  package.xml
rm_util/include/rm_util/: calc_tool.hpp  coordinate_tool.hpp  debug_image.hpp  measure_tool.hpp  pid.hpp  rm_util.hpp
rm_util/src/: calc_tool.cpp  coordinate_tool.cpp  measure_tool.cpp  pid.cpp
