<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1063760288@qq.com">scurm</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm_base</depend>
  <depend>rm_cam</depend>
  <depend>rm_auto_aim</depend>
  <depend>rm_entity_cam</depend>
  <depend>rclcpp_components</depend>
  <depend>wit_imu_driver</depend>
  <depend>imu_filter_madgwick</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
