<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_trajectory</name>
  <version>0.9.0</version>
  <description>
    robomaster tool package for projectile motion,it's helpful to develop application like Auto-Aim,etc.
  </description>
  <maintainer email="hym49@outlook.com">yongmeng he</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>